[package]
name = "dlx"
version = "0.1.0"
authors = ["wasabi315 <wasabi.nvim.st@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0.1"
rustc-hash = "1.1.0"
bit-set = "0.5.3"
paste = "1.0.9"
